Fix dark overflow background on Mac/iOS

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -143,6 +143,12 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+body {
+	// Sets overflowing background color when scrolled past the page in
+	// MacOS or in iOS.
+	background: @color-brand;
+}
+
 * {
 	box-sizing: border-box;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
